<resources>
    <string name="app_name">Project_IAPIM</string>
    <string name="signup">Sing Up</string>
    <string name="signin">Sign In</string>
    <string name="no_hp">Nomor HP</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="social">Sig up dengan jejaring sosial</string>
</resources>
